fix quillJS overflow - #849

--- a/web/themes/quartiers_solidaires/assets/components/molecules/editor/editor.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/editor/editor.scss
@@ -78,6 +78,7 @@
   .ql-editor {
     min-height: 120px;
     padding: 0;
+    overflow-y: visible;
 
     @include media-breakpoint-down(sm) {
       min-height: 200px;
